Deteled a redundant file, re-referenced the proper dirs on home and updated some templates
	modified:   _templates/footer.html
	modified:   _templates/header.html
	deleted:    home/header.html
	modified:   home/index.php

--- a/_templates/footer.html
+++ b/_templates/footer.html
@@ -1,5 +1,5 @@
 <footer>
-    <p>site feito por Kaíque Costa Nobre da EI-32</p>
+    <p>sites feitos por Gustavo Costa Santos, Kaíque Costa Nobre e Kézia Silva Santos da EI-32</p>
 </footer>
 
 <style>
