--- a/_templates/header.html
+++ b/_templates/header.html
@@ -1,5 +1,5 @@
 <header>
-    <h1>Agenda de contatos</h1>
+    <h1>Atividades de web</h1>
     <nav>
         <a href="/contatos">Agenda de contatos</a>
         <a href="/cores">CORES</a>
