Centralizing more of the php code and making the divs use flexbox-based centralization
	modified:   _css/style.css
	modified:   _templates/header.html
	modified:   cores/index.php
	modified:   correct/index.php
	modified:   home/index.php
	modified:   incorrect/index.php
	modified:   login/index.php
	modified:   multas/index.php
	modified:   romano/code.php
	modified:   romano/index.php

--- a/_templates/header.html
+++ b/_templates/header.html
@@ -1,10 +1,10 @@
 <header>
-    <h1><a href="/home" class="no_deco">Atividades de web</a></h1>
+    <h1><a href="/home/" class="no_deco">Atividades de web</a></h1>
     <nav>
-        <a href="/contatos">Agenda de contatos</a>
-        <a href="/cores">CORES</a>
-        <a href="/login">Login</a>
-        <a href="/multas">Calculadora de multas</a>
-        <a href="/romano">Números romanos</a>
+        <a href="/contatos/">Agenda de contatos</a>
+        <a href="/cores/">CORES</a>
+        <a href="/login/">Login</a>
+        <a href="/multas/">Calculadora de multas</a>
+        <a href="/romano/">Números romanos</a>
     </nav>
 </header>
