Simplifed some titles 	modified:   _templates/header.html 	modified:   contatos/index.php 	modified:   cores/index.php 	modified:   home/index.php

--- a/_templates/header.html
+++ b/_templates/header.html
@@ -1,7 +1,7 @@
 <header>
     <h1><a href="../home/" class="no_deco">Atividades de web</a></h1>
     <nav>
-        <a href="../contatos/" class="no_deco">Agenda de contatos</a>
+        <a href="../contatos/" class="no_deco">Agenda</a>
         <a href="../cores/" class="no_deco">CORES</a>
         <a href="../login/" class="no_deco">Login</a>
         <a href="../multas/" class="no_deco">Calculadora de multas</a>
