swapped all the "_" in favor of "-" in css classes to make typing experience better 	modified:   _css/style.css 	modified:   _templates/header.html 	modified:   contatos/contact_reader.php 	modified:   contatos/index.php 	modified:   cores/code.php 	modified:   cores/index.php 	modified:   home/index.php 	modified:   login/index.php 	modified:   login_kaique/correct.php 	modified:   login_kaique/incorrect.php 	modified:   login_kaique/index.php 	modified:   romano/index.php 	modified:   romano_kaique/index.php

--- a/_templates/header.html
+++ b/_templates/header.html
@@ -1,9 +1,9 @@
 <header>
-    <h1><a href="../home/" class="no_deco">Atividades de web</a></h1>
+    <h1><a href="../home/" class="no-deco">Atividades de web</a></h1>
     <nav>
-        <a href="../contatos/" class="no_deco">Agenda</a>
-        <a href="../cores/" class="no_deco">CORES</a>
-        <a href="../login/" class="no_deco">Login</a>
-        <a href="../romano/" class="no_deco">Números romanos</a>
+        <a href="../contatos/" class="no-deco">Agenda</a>
+        <a href="../cores/" class="no-deco">CORES</a>
+        <a href="../login/" class="no-deco">Login</a>
+        <a href="../romano/" class="no-deco">Números romanos</a>
     </nav>
 </header>
