Minor changes 	modified:   login_gustavo/Aprovado.php 	modified:   login_gustavo/Reprovado.php 	modified:   login_kezia/acesso_negado.html 	modified:   login_kezia/acesso_permitido.html 	modified:   login_kezia/index.html 	modified:   login_kezia/login.php 	modified:   romano_gustavo/index.php 	modified:   romano_kezia/index.php

--- a/login_kezia/index.html
+++ b/login_kezia/index.html
@@ -1,17 +1,22 @@
-<!-- index.html -->
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Login</title>
-  </head>
-  <body>
-    <h1>Login</h1>
-    <form action="login.php" method="post">
-      <label for="username">Username:</label>
-      <input type="text" id="username" name="username"><br>
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password"><br>
-      <input type="submit" value="Login">
-    </form>
-  </body>
+<html lang="pt-BR">
+
+<head>
+  <title>Login</title>
+</head>
+
+<body>
+  <h1>Login</h1>
+  <form action="login.php" method="post">
+    <label for="username">Username:</label>
+    <input type="text" id="username" name="username"><br>
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password"><br>
+    <input type="submit" value="Login">
+  </form>
+</body>
+<footer>
+  <p>Site feito por Kézia Silva Santos da EI-32</p>
+</footer>
+
 </html>
